--- a/whatsapp/fixtures/whatsapp_rules.json
+++ b/whatsapp/fixtures/whatsapp_rules.json
@@ -46,7 +46,7 @@ Accounting signals registered for customers app
   "fields": {
     "event_type": "INSPECTION_CREATED",
     "is_enabled": true,
-    "template": 6,
+    "template": null,
     "delay_minutes": 0,
     "conditions": {},
     "created_at": "2025-12-31T11:06:56.194Z",
