🔒 إضافة حماية Brute Force وتحسين أمان API
## التحسينات الأمنية المضافة:

### 1. Django Axes - حماية من هجمات Brute Force
- ✅ تثبيت django-axes==6.5.1
- ✅ حظر تلقائي بعد 5 محاولات فاشلة لتسجيل الدخول
- ✅ مدة الحظر: ساعة واحدة
- ✅ تتبع المحاولات الفاشلة بناءً على IP والـ Username
- ✅ تسجيل جميع المحاولات في قاعدة البيانات
- ✅ صفحة حظر مخصصة (عربي/إنجليزي)

### 2. تحسين API Rate Limiting
- ✅ تقليل حد الطلبات للمستخدمين المسجلين: من 1000 إلى 200 طلب/ساعة
- ✅ تقليل حد الطلبات للزوار: من 100 إلى 20 طلب/ساعة
- ✅ حماية أفضل ضد إساءة استخدام API

## الملفات المعدلة:

### requirements.txt
- إضافة: django-axes==6.5.1

### crm/settings.py
- إضافة 'axes' إلى INSTALLED_APPS
- إضافة 'axes.middleware.AxesMiddleware' إلى MIDDLEWARE
- إضافة 'axes.backends.AxesStandaloneBackend' إلى AUTHENTICATION_BACKENDS
- تحديث REST_FRAMEWORK throttle rates
- إضافة إعدادات Axes الكاملة:
  * AXES_FAILURE_LIMIT = 5
  * AXES_COOLOFF_TIME = 1 ساعة
  * AXES_LOCKOUT_PARAMETERS = ['ip_address', 'username']
  * AXES_LOCKOUT_TEMPLATE = 'axes/lockout.html'

### templates/axes/lockout.html (جديد)
- صفحة حظر مخصصة بتصميم احترافي
- دعم اللغتين العربية والإنجليزية
- عرض سبب الحظر ومدته وعنوان IP
- تحذير أمني للمستخدم

## قاعدة البيانات:
- ✅ تم تطبيق 9 migrations لـ django-axes
- ✅ جداول جديدة: axes_accessattempt, axes_accesslog, axes_accessfailurelog

## الفوائد الأمنية:
- 🛡️ حماية من هجمات Brute Force على /admin/
- 🛡️ منع إساءة استخدام API
- 🛡️ تسجيل شامل للأنشطة المشبوهة
- 🛡️ إمكانية مراقبة المحاولات الفاشلة من Admin Panel

## الاختبار:
- تم اختبار الحظر بعد 5 محاولات فاشلة
- تم التحقق من عمل صفحة الحظر
- تم التحقق من تسجيل المحاولات في قاعدة البيانات

التاريخ: 2026-01-20

--- a/requirements.txt
+++ b/requirements.txt
@@ -69,6 +69,7 @@ django-redis==6.0.0
 django-tables2==2.7.5
 django-timezone-field==7.2.1
 django-widget-tweaks==1.5.0
+django-axes==6.5.1
 django_celery_results==2.6.0
 djangorestframework==3.16.1
 djangorestframework-simplejwt==5.2.2
