--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,8 @@ celery==5.5.3
 certifi==2025.4.26
 cffi==2.0.0
 channels==4.3.1
+channels-redis>=4.2.0
+daphne>=4.1.0
 chardet==5.2.0
 charset-normalizer==3.4.2
 click==8.2.1
