✨ إضافة نظام السعر قبل الخصم مع التحسينات
- إضافة حساب السعر قبل الخصم (4 مستويات)
- تحديث تصميم صفحة المنتج (حجم اللوغو + تأثيرات حركية)
- إصلاح معالجة المسافات في أكواد المنتجات
- إضافة أيقونات السوشيال ميديا (5 منصات)
- تحديث معلومات التواصل (هوتلاين 19148)
- إضافة نسخة staging للاختبار
- تحديثات التصميم: خطوط X على السعر القديم، تقسيم رأسي بين الأسعار

--- a/cloudflare-worker/package.json
+++ b/cloudflare-worker/package.json
@@ -6,9 +6,22 @@
   "scripts": {
     "dev": "wrangler dev",
     "deploy": "wrangler deploy",
-    "deploy:prod": "wrangler deploy --env production"
+    "deploy:prod": "wrangler deploy --env production",
+    "test:dev": "wrangler dev --config wrangler-test.toml --remote",
+    "test:dev:local": "wrangler dev --config wrangler-test.toml",
+    "test:deploy": "wrangler deploy --config wrangler-test.toml",
+    "test:staging": "wrangler deploy --config wrangler-test.toml --env staging",
+    "staging:dev": "wrangler dev --config wrangler-staging.toml --remote",
+    "staging:dev:local": "wrangler dev --config wrangler-staging.toml",
+    "staging:deploy": "wrangler deploy --config wrangler-staging.toml",
+    "tail": "wrangler tail",
+    "tail:test": "wrangler tail --config wrangler-test.toml",
+    "tail:staging": "wrangler tail --config wrangler-staging.toml"
   },
   "keywords": ["cloudflare", "worker", "qr", "elkhawaga"],
   "author": "Elkhawaga",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "wrangler": "^3.80.0"
+  }
 }
