📚 إضافة ملفات التوثيق والاختبار
- DISCOUNT_PRICE_PLAN.md: خطة تفصيلية لنظام الخصومات
- STAGING-GUIDE.md: دليل استخدام نسخة الاختبار
- PRODUCTION-DEPLOYMENT.md: دليل النشر على Production
- README-TEST.md: تعليمات الاختبار
- staging-dashboard.html: لوحة تحكم الاختبار
- test-page.html: صفحة اختبار المنتج
- test-product.json: بيانات منتج تجريبية
- test-worker.sh: سكريبت اختبار Worker
- تحديث .gitignore للسماح بملفات التوثيق

--- a/cloudflare-worker/.gitignore
+++ b/cloudflare-worker/.gitignore
@@ -45,10 +45,14 @@ Thumbs.db
 
 # Testing & Temporary
 *.test.js
-test-*.json
-test-*.html
 *.tmp
 *.temp
+
+# Documentation & Development files (keep these for reference)
+# test-*.json
+# test-*.html
+# test-worker.sh
+# *.md files are included for documentation
 
 # SQLite databases (Wrangler local storage)
 *.sqlite
