تحسينات لوحة الإدارة: jazzmin + إصلاح الإشعارات والأيقونات
- تثبيت django-jazzmin 3.0.2 وتكوين لوحة الإدارة
- إصلاح أيقونات FontAwesome في الموقع الرئيسي (global-cairo-font.css)
- تصفية الإشعارات المنبثقة للعاجلة والمهمة فقط
- تخفيض أولوية إشعار إنشاء العميل إلى منخفضة
- إضافة CSS مخصص للإدارة (RTL, sidebar, navbar, cards)
- إصلاح أخطاء الصلاحيات وتحديث apps.py

--- a/requirements.txt
+++ b/requirements.txt
@@ -46,7 +46,7 @@ defusedxml==0.7.1
 diff-match-patch==20241021
 dj-database-url==3.0.0
 Django==5.1.15
-django-admin-interface==0.30.1
+django-jazzmin==3.0.2
 django-allauth==65.13.0
 django-apscheduler==0.7.0
 django-cacheops==7.2
